testsuite/poke.pkl/neg-int-overflow-diag-1.pk
/* { dg-do compile } */

var res
  = -(0x8000_0000U as int); /* { dg-error "overflow" } */
